--- a/apps/frontend-e2e/project.json
+++ b/apps/frontend-e2e/project.json
@@ -3,8 +3,18 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
   "sourceRoot": "apps/frontend-e2e/src",
-  "tags": [],
-  "implicitDependencies": ["frontend"],
-  "// targets": "to see all targets run: nx show project frontend-e2e --web",
-  "targets": {}
+  "targets": {
+    "e2e": {
+      "executor": "@nx/playwright:playwright",
+      "options": {
+        "playwrightConfig": "apps/frontend-e2e/playwright.config.ts"
+      }
+    },
+    "install-deps": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "npx playwright install --with-deps"
+      }
+    }
+  }
 }
