--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "private": true,
   "devDependencies": {
     "@eslint/js": "^9.8.0",
+    "@nestjs/schematics": "^11.0.0",
+    "@nestjs/testing": "^11.0.0",
     "@next/eslint-plugin-next": "^16.0.1",
     "@nx-go/nx-go": "^3.3.1",
     "@nx/devkit": "22.3.3",
@@ -15,7 +17,10 @@
     "@nx/js": "^22.3.3",
     "@nx/nest": "^22.3.3",
     "@nx/next": "^22.3.3",
+    "@nx/node": "22.3.3",
     "@nx/playwright": "22.3.3",
+    "@nx/web": "22.3.3",
+    "@nx/webpack": "22.3.3",
     "@nx/workspace": "22.3.3",
     "@playwright/test": "^1.36.0",
     "@swc-node/register": "~1.9.1",
@@ -39,6 +44,7 @@
     "eslint-plugin-react-hooks": "5.0.0",
     "jest": "^30.0.2",
     "jest-environment-jsdom": "^30.0.2",
+    "jest-environment-node": "^30.0.2",
     "jest-util": "^30.0.2",
     "nx": "22.3.3",
     "prettier": "~3.6.2",
@@ -46,11 +52,18 @@
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
     "typescript": "~5.9.2",
-    "typescript-eslint": "^8.40.0"
+    "typescript-eslint": "^8.40.0",
+    "webpack-cli": "^5.1.4"
   },
   "dependencies": {
+    "@nestjs/common": "^11.0.0",
+    "@nestjs/core": "^11.0.0",
+    "@nestjs/platform-express": "^11.0.0",
+    "axios": "^1.6.0",
     "next": "~16.0.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.8.0"
   }
 }
