feat: add realistic data

--- a/infra/k8s/apps.yaml
+++ b/infra/k8s/apps.yaml
@@ -33,6 +33,8 @@ spec:
               value: 'postgres'
             - name: PGPASSWORD
               value: 'password'
+            - name: SEED_ASSET_COUNT
+              value: '1000'
 ---
 # 2. Gateway (NestJS)
 apiVersion: v1
