feat: move proto to shared library and install grpc nest.js dependencies

--- a/services/asset-service/Dockerfile
+++ b/services/asset-service/Dockerfile
@@ -1,19 +1,33 @@
 # Stage 1: Build
-# Using a modern Go version (1.25) on Alpine 3.21
 FROM golang:1.25-alpine3.21 AS builder
+
+# Install protoc and Go gRPC plugins
+RUN apk add --no-cache protoc protobuf-dev
+RUN go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
+RUN go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
+
 WORKDIR /app
-COPY go.mod go.sum ./
+
+# 1. Copy the shared proto library (requires root context in Tilt)
+COPY libs/shared/proto/ ./libs/shared/proto/
+
+# 2. Copy and download service dependencies
+COPY services/asset-service/go.mod services/asset-service/go.sum ./services/asset-service/
+WORKDIR /app/services/asset-service
 RUN go mod download
-COPY . .
+
+# 3. Copy service source code
+COPY services/asset-service/ .
+
+# 4. Run the 'comment' command to generate gRPC code and build
+RUN go generate ./...
 RUN CGO_ENABLED=0 GOOS=linux go build -o /asset-service .
 
 # Stage 2: Final
-# Match the Alpine version exactly (3.21)
 FROM alpine:3.21
 WORKDIR /
 COPY --from=builder /asset-service /asset-service
 
-# Use a numeric ID for the user to stay shell-agnostic
-USER 1000:1000
+# Use standard gRPC port from apps.yaml
 EXPOSE 50051
 ENTRYPOINT ["/asset-service"]
