--- a/package.json
+++ b/package.json
@@ -56,8 +56,11 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
+    "@grpc/grpc-js": "^1.14.3",
+    "@grpc/proto-loader": "^0.8.0",
     "@nestjs/common": "^11.0.0",
     "@nestjs/core": "^11.0.0",
+    "@nestjs/microservices": "^11.1.12",
     "@nestjs/platform-express": "^11.0.0",
     "axios": "^1.6.0",
     "next": "~16.0.1",
